# bybit-c-client

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
examples/: private_example.c  public_example.c
include/: bybit_client.h  bybit_private.h  bybit_public.h
src/: bybit_client.c  bybit_private.c  bybit_public.c
tests/: test_instruments_query.c  test_order_body.c  test_public_queries.c  test_sign.c
